build/smpech/service.yml
apiVersion: v1
kind: Service
metadata:
    name: echo
spec:
    selector:
        app: echo
        release: summer
    ports:
        - name: http
          port: 80
